--- a/web/src/main/resources/templates/fragments/head.html
+++ b/web/src/main/resources/templates/fragments/head.html
@@ -15,6 +15,9 @@
     <meta name="msapplication-config" content="browserconfig.xml"/>
     <meta name="theme-color" content="#ffffff"/>
 
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+
     <title>Bncl Demo</title>
 </head>
 <body>
