WEB: update img header, change webicon

--- a/web/src/main/resources/templates/main.html
+++ b/web/src/main/resources/templates/main.html
@@ -13,7 +13,7 @@
                     <h2>
                         <b>Bncl</b> <span class="normalText">- BPMN natural creation language</span>
                     </h2>
-                    <img class="headerDiagram" src="img/header_diagram.png"></img>
+                    <img class="racoonLogo" src="img/racoon_logo_trans.png"></img>
                 </div>
             </div>
             <div class="content">
