WEB: add mobile support

--- a/web/src/main/resources/templates/fragments/head.html
+++ b/web/src/main/resources/templates/fragments/head.html
@@ -18,6 +18,8 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"></meta>
+
     <title>Bncl Demo</title>
 </head>
 <body>
