WEB: #37 add tawk.to chatbox

--- a/web/src/main/resources/templates/fragments/scripts.html
+++ b/web/src/main/resources/templates/fragments/scripts.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/highlight.pack.js"></script>
     <script type="text/javascript" src="js/download.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script type="text/javascript" src="js/tawkChat.js"></script>
 
     <script th:inline="javascript">
         function SelectAll(id) {
