--- a/web/src/main/resources/templates/fragments/bpmnViewer.html
+++ b/web/src/main/resources/templates/fragments/bpmnViewer.html
@@ -3,13 +3,22 @@
 <body>
 <div th:fragment="bpmnViewer(bpmn)">
     <h4>BPMN 2.0 XML output: </h4>
-    <button
-            class="waves-effect waves-dark btn blue-grey lighten-5 black-text"
-            id="downloadBpmn"
-            onclick="createAndOpenFile()"
-            download="process.bpmn">
-        Download as BPMN-file
-    </button>
+    <div class="row">
+        <button
+                class="waves-effect waves-dark btn blue-grey lighten-5 black-text"
+                id="downloadBpmn"
+                onclick="createAndOpenFile()"
+                download="process.bpmn">
+            Download as BPMN-file
+        </button>
+        <button
+                class="waves-effect waves-dark btn blue-grey lighten-5 black-text"
+                id="downloadWithUI"
+                onclick="createAndOpenFileWithLayout()"
+                download="process.bpmn">
+            Download as BPMN-file with Layout
+        </button>
+    </div>
     <pre>
         <code id="xml" class="xml">...
 
@@ -57,8 +66,17 @@
 
         function createAndOpenFile() {
             var bpmn = [[${bpmn}]];
-            download(addPrefix(bpmn), "process.bpmn", "text/xml");
+            bpmn = addPrefix(bpmn);
+            download(bpmn, "process.bpmn", "text/xml");
         }
+
+        function createAndOpenFileWithLayout() {
+            var bpmn = [[${bpmn}]];
+            bpmn = addPrefix(bpmn);
+            autoLayoutFromApi(bpmn);
+            //download(bpmn, "process.bpmn", "text/xml");
+        }
+
         /*]]>*/
     </script>
 </div>
