--- a/web/src/main/resources/templates/fragments/scripts.html
+++ b/web/src/main/resources/templates/fragments/scripts.html
@@ -63,16 +63,14 @@
 
     <script>
         function autoLayoutFromApi(xmlString) {
-            var http = new XMLHttpRequest();
             var url = "http://localhost:8082/autoLayout";
-            var data = new FormData();
-            data.append('bpmn', xmlString);
-            http.open('POST', url, true);
-            console.log(data);
-            http.onload = function() {
-                console.log(this.responseText);
+            var data = {
+                bpmn: xmlString
             };
-            http.send(data);
+            return $.post(url, data)
+                .done(function(res) {
+                return res;
+             });
         }
     </script>
 
