--- a/web/src/main/resources/templates/fragments/scripts.html
+++ b/web/src/main/resources/templates/fragments/scripts.html
@@ -63,7 +63,7 @@
 
     <script>
         function autoLayoutFromApi(xmlString) {
-            var url = "http://autolayout.niklaskiefer.de/autoLayout";
+            var url = "https://autolayout.niklaskiefer.de/autoLayout";
             var data = {
                 bpmn: xmlString
             };
