--- a/web/src/main/resources/public/css/main.css
+++ b/web/src/main/resources/public/css/main.css
@@ -95,3 +95,74 @@ html {
     background-color: #cfd8dc;
 }
 
+.notification {
+    display: table;
+    position: relative;
+    margin: 40px auto 0;
+    width: 500px;
+    background-color: #0074D9;
+    color: #fff;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.notification--error {
+    background-color: #FF4136;
+}
+
+.notification--success {
+    background-color: #2ECC40;
+}
+
+
+.notification-icon {
+    display: table-cell;
+    vertical-align: middle;
+    width: 60px;
+    padding: 30px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.25);
+}
+.notification-icon > i {
+    width: 20px;
+    font-size: 20px;
+}
+
+.notification-body {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 30px 20px 30px 10px;
+}
+.notification-body > p {
+    line-height: 1.2;
+    margin-top: 6px;
+    color: whitesmoke;
+    font-size: large;
+}
+.notification-close {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #fff;
+    border: none;
+    outline: none;
+    right: 5px;
+    top: 5px;
+    opacity: 0;
+    font-size: small;
+    cursor: pointer;
+    padding: 10px;
+}
+.notification:hover .notification-close {
+    opacity: 1;
+}
+.notification-close:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.notification.is-hidden {
+    opacity: 0;
+    height: 0;
+    font-size: 0;
+    padding: 0;
+    margin: 0 auto;
+    display: block;
+}
