--- a/web/src/main/resources/public/css/main.css
+++ b/web/src/main/resources/public/css/main.css
@@ -18,7 +18,7 @@ p, textarea {
 }
 
 a {
-    color: #424242;
+    color: #424242 !important;
 }
 
 body {
@@ -165,4 +165,20 @@ html {
     padding: 0;
     margin: 0 auto;
     display: block;
+}
+
+.tabs .indicator {
+    background-color: black; !important;
+    color: black; !important;
+}
+
+.tab a :hover {
+    color: rgba(0, 0, 0, 0.5); !important;
+}
+
+#renderedBPMN {
+    margin-top: 2%;
+    width: 100%;
+    height: 500px;
+    margin-bottom: 2%;
 }
