--- a/web/src/main/resources/templates/fragments/bpmnViewer.html
+++ b/web/src/main/resources/templates/fragments/bpmnViewer.html
@@ -27,6 +27,7 @@
             </pre>
         </div>
         <div id="bpmnTab" class="col s12">
+            <span class="badge-autolayout badge blue-grey lighten-5 black-text"><a href="https://github.com/pinussilvestrus/bncl-autolayout" target="_blank">Auto-Layouting by BNCL</a></span>
             <div id="renderedBPMN"></div>
         </div>
     </div>
