--- a/web/src/main/resources/templates/fragments/head.html
+++ b/web/src/main/resources/templates/fragments/head.html
@@ -7,6 +7,8 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'/>
+    <link rel="stylesheet" href="bpmnjs/assets/diagram-js.css" />
+    <link rel="stylesheet" href="bpmnjs/assets/bpmn-font/css/bpmn-embedded.css" />
     <link rel="stylesheet" href='materialize/css/materialize.min.css'/>
     <link rel="stylesheet" href='css/main.css'/>
 
