--- a/web/src/main/resources/templates/fragments/scripts.html
+++ b/web/src/main/resources/templates/fragments/scripts.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/download.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script type="text/javascript" src="js/tawkChat.js"></script>
-    <script type="text/javascript" src="bpmnjs/bpmn-modeler.min.js"></script>
+    <script type="text/javascript" src="bpmnjs/bpmn-viewer.production.min.js"></script>
 
     <script th:inline="javascript">
         function SelectAll(id) {
