--- a/web/src/main/resources/templates/fragments/bpmnViewer.html
+++ b/web/src/main/resources/templates/fragments/bpmnViewer.html
@@ -112,17 +112,15 @@
             bpmn = addPrefix(bpmn);
             autoLayoutFromApi(bpmn).success(function (res, err) {
 
-                bpmnJs.importXML(res, function (err) {
+                bpmnJs.importXML(res).then(function (result) {
 
-                    if (err) {
-                        console.log('error rendering', err);
-                    } else {
-                        var canvas = bpmnJs.get('canvas');
-                        canvas.zoom('fit-viewport');
+                    var canvas = bpmnJs.get('canvas');
+                    canvas.zoom('fit-viewport');
 
-                        var linting = bpmnJs.get('linting');
-                        linting.activateLinting();
-                    }
+                    var linting = bpmnJs.get('linting');
+                    linting.activateLinting();
+                }).catch(function (err) {
+                    console.log(err);
                 });
             }).fail(function (err) {
                 console.log('error rendering', err)
